force-app/main/default/objects/LLC_BI__ClosingChecklist__c/LLC_BI__ClosingChecklist__c.object-meta.xml
<CustomObject>
    <description>The Closing Checklist Object is used to track details about the documents assigned to the closing checklist</description>
    <label>Closing Checklist</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closing Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>