force-app/main/default/objects/LLC_BI__ClosingChecklist__c/fields/LLC_BI__Approval_Roles__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approval_Roles__c</fullName>
    <description>This field is optional. This is a semicolon delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field works in tandem with the newer Placeholder Approval Roles field, which can accept more characters.</description>
    <inlineHelpText>This field is optional. This is a semicolon delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length.</inlineHelpText>
    <label>Approval Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>