force-app/main/default/objects/LLC_BI__ClosingChecklist__c/fields/NDOC__Placeholder_Approval_Roles__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
    <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
    <inlineHelpText>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document.</inlineHelpText>
    <label>Placeholder Approval Roles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>