force-app/main/default/objects/LLC_BI__ClosingChecklist__c/listViews/All_Closing_Checklist_records.listView-meta.xml
<ListView>
    <fullName>All_Closing_Checklist_records</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__docManager__c</columns>
    <columns>LLC_BI__docClass__c</columns>
    <columns>LLC_BI__docType__c</columns>
    <columns>LLC_BI__Portal_Doc_Name__c</columns>
    <columns>LLC_BI__Portal_Doc_Description__c</columns>
    <columns>LLC_BI__Portal_Enabled__c</columns>
    <columns>LLC_BI__Placeholder_Viewer_Profiles__c</columns>
    <columns>NDOC__Placeholder_Viewer_Roles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Closing Checklist records</label>
    <language>en_US</language>
</ListView>